--- a/src/app/PRICING/product-finalised/product-finalised.component.html
+++ b/src/app/PRICING/product-finalised/product-finalised.component.html
@@ -70,12 +70,12 @@
         </mat-form-field>
 
         <mat-form-field required class="container-half-width">
-            <input matInput placeholder="Cost Per UOM" formControlName="CostPerUOM">
+            <input matInput placeholder="Cost Per UOM" (blur)="calculateMargins()" formControlName="CostPerUOM">
         </mat-form-field>
 
 
         <mat-form-field required class="container-half-width">
-            <input matInput placeholder="Selling Price Per UOM" formControlName="SellingPricePerUOM">
+            <input matInput placeholder="Selling Price Per UOM" (blur)="calculateMargins()" formControlName="SellingPricePerUOM">
         </mat-form-field>
 
 
@@ -173,6 +173,17 @@
         <mat-form-field class="container-half-width">
             <input matInput placeholder="Exchange Rate" formControlName="ExchangeRate">
         </mat-form-field>
+<br><br>
+        <h4>Margins</h4>
+
+        <mat-form-field class="container-half-width">
+            <input matInput placeholder="Margin percentage" disabled value="{{marginPercentage}}" >
+        </mat-form-field>
+
+        <mat-form-field class="container-half-width">
+            <input matInput placeholder="Margin per dollar" disabled value="{{marginPerDollar}}" >
+        </mat-form-field>
+
 
 
         <br><br>
